add UniqueText service and Weather service, added parameters to twig.yaml and services.yaml, add percent field to Blog, outputed values to twig templates

--- a/config/packages/twig.yaml
+++ b/config/packages/twig.yaml
@@ -3,6 +3,11 @@ twig:
 
     form_themes: ['bootstrap_5_layout.html.twig']
 
+    globals:
+        weather: '@App\Service\WeatherService'
+
 when@test:
     twig:
         strict_variables: true
+
+
