--- a/config/packages/messenger.yaml
+++ b/config/packages/messenger.yaml
@@ -5,10 +5,11 @@ framework:
         transports:
             # https://symfony.com/doc/current/messenger.html#transport-configuration
             async:
-                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
-                options:
-                    use_notify: true
-                    check_delayed_interval: 60000
+#                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+#                options:
+#                    use_notify: true
+#                    check_delayed_interval: 60000\
+                dsn: '%env(RABBITMQ_URL)%'
                 retry_strategy:
                     max_retries: 3
                     multiplier: 2
@@ -21,9 +22,8 @@ framework:
             messenger.bus.default: []
 
         routing:
-            Symfony\Component\Mailer\Messenger\SendEmailMessage: async
-            Symfony\Component\Notifier\Message\ChatMessage: async
-            Symfony\Component\Notifier\Message\SmsMessage: async
+            App\Message\CheckUniqueTextJob: async
+            App\Message\SetStatusMessage: async
 
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
