--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,17 @@
         "ext-ctype": "*",
         "ext-curl": "*",
         "ext-iconv": "*",
+        "api-platform/doctrine-orm": "^4.0",
+        "api-platform/symfony": "^4.0",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
         "easycorp/easyadmin-bundle": "4.x-dev",
+        "guzzle/guzzle": "^3.8",
+        "guzzlehttp/guzzle": "^7.9",
         "knplabs/knp-paginator-bundle": "^6.5",
+        "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.30",
         "stof/doctrine-extensions-bundle": "^1.12",
@@ -51,6 +56,7 @@
         "symfonycasts/verify-email-bundle": "^1.17",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.12",
+        "twig/string-extra": "^3.12",
         "twig/twig": "^2.12|^3.0"
     },
     "config": {
