--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,6 @@
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
         "easycorp/easyadmin-bundle": "4.x-dev",
-        "guzzle/guzzle": "^3.8",
         "guzzlehttp/guzzle": "^7.9",
         "knplabs/knp-paginator-bundle": "^6.5",
         "nelmio/cors-bundle": "^2.5",
@@ -34,6 +33,7 @@
         "symfony/framework-bundle": "6.4.*",
         "symfony/http-client": "6.4.*",
         "symfony/intl": "6.4.*",
+        "symfony/lock": "6.4.*",
         "symfony/mailer": "6.4.*",
         "symfony/messenger": "6.4.*",
         "symfony/mime": "6.4.*",
@@ -74,7 +74,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "App\\Tests\\": "tests/"
+            "Tests\\": "tests/"
         }
     },
     "replace": {
