--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,44 +4,58 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    photo_dir: "%kernel.project_dir%/public/uploads/photos"
-    author_blog: 4
+  photo_dir: "%kernel.project_dir%/public/uploads/photos"
+  author_blog: 4
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true      # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
-    App\Service\CheckUniqueText:
-        $key: '%env(CONTENT_WATCH_API_KEY)%'
-        $translator: '@translator'
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: '../src/'
+    exclude:
+      - '../src/DependencyInjection/'
+      - '../src/Entity/'
+      - '../src/Kernel.php'
+  App\Service\CheckUniqueText:
+    $key: '%env(CONTENT_WATCH_API_KEY)%'
+    $translator: '@translator'
 
-    App\Service\WeatherService:
-        $api_url: '%env(WEATHER_SERVICE_URL)%'
+  App\Service\WeatherService:
+    $api_url: '%env(WEATHER_SERVICE_URL)%'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+  app.normalizer.object_normalizer:
+    parent: Symfony\Component\Serializer\Normalizer\ObjectNormalizer
+    tags: [ "serializer.normalizer" ]
+    arguments:
+      $propertyInfoExtractor: null
+      $defaultContext:
+        circular_reference_handler: '@App\Serializer\CircularReferenceHandler'
+        #        ignored_attributes: [ 'insertedOn', 'updatedOn', 'createdAt', 'updatedAt' ]
+        ignored_attributes: [ 'createdAt' ]
+        callbacks: {
+          'updatedAt': '@App\Serializer\UpdatedAtCallback'
+        }
+
+  # add more service definitions when explicit configuration is needed
+  # please note that last definitions always *replace* previous ones
 knp_paginator:
-    page_range: 7                       # number of links shown in the pagination menu (e.g: you have 10 pages, a page_range of 3, on the 5th page you'll see links to page 4, 5, 6)
-    default_options:
-        page_name: page                 # page query parameter name
-        sort_field_name: sort           # sort field query parameter name
-        sort_direction_name: direction  # sort direction query parameter name
-        distinct: true                  # ensure distinct results, useful when ORM queries are using GROUP BY statements
-        filter_field_name: filterField  # filter field query parameter name
-        filter_value_name: filterValue  # filter value query parameter name
-    template:
-#        pagination: '@KnpPaginator/Pagination/sliding.html.twig'     # sliding pagination controls template
-        pagination: '@KnpPaginator/Pagination/twitter_bootstrap_v4_pagination.html.twig'     # sliding pagination controls template
-        rel_links: '@KnpPaginator/Pagination/rel_links.html.twig'     # <link rel=...> tags template
-        sortable: '@KnpPaginator/Pagination/sortable_link.html.twig' # sort link template
-        filtration: '@KnpPaginator/Pagination/filtration.html.twig'  # filters template
+  page_range: 7                       # number of links shown in the pagination menu (e.g: you have 10 pages, a page_range of 3, on the 5th page you'll see links to page 4, 5, 6)
+  default_options:
+    page_name: page                 # page query parameter name
+    sort_field_name: sort           # sort field query parameter name
+    sort_direction_name: direction  # sort direction query parameter name
+    distinct: true                  # ensure distinct results, useful when ORM queries are using GROUP BY statements
+    filter_field_name: filterField  # filter field query parameter name
+    filter_value_name: filterValue  # filter value query parameter name
+  template:
+    #        pagination: '@KnpPaginator/Pagination/sliding.html.twig'     # sliding pagination controls template
+    pagination: '@KnpPaginator/Pagination/twitter_bootstrap_v4_pagination.html.twig'     # sliding pagination controls template
+    rel_links: '@KnpPaginator/Pagination/rel_links.html.twig'     # <link rel=...> tags template
+    sortable: '@KnpPaginator/Pagination/sortable_link.html.twig' # sort link template
+    filtration: '@KnpPaginator/Pagination/filtration.html.twig'  # filters template
+
