--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "easycorp/easyadmin-bundle": "4.x-dev",
         "guzzlehttp/guzzle": "^7.9",
         "knplabs/knp-paginator-bundle": "^6.5",
+        "nelmio/api-doc-bundle": "^4.32",
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.30",
