--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -20,6 +20,15 @@ when@dev:
                 level: debug
 #                level: notice
                 channels: [ "parser" ]
+            weather:
+                type: stream
+                #                path: "%kernel.logs_dir%/%kernel.environment%.log"
+                path: "%kernel.logs_dir%/weather-%kernel.environment%.log"
+                formatter: monolog.formatter.logstash
+                process_psr_3_messages: true
+                level: debug
+                #                level: notice
+                channels: [ "weather" ]
             # uncomment to get logging in your browser
             # you may have to allow bigger header sizes in your Web server configuration
             #firephp:
