--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -19,3 +19,7 @@ app.redocly:
     path: /api/doc
     methods: GET
     defaults: { _controller: nelmio_api_doc.controller.redocly }
+
+# config/routes.yaml
+api_login_check:
+    path: /api/login_check
