--- a/compose.yaml
+++ b/compose.yaml
@@ -13,6 +13,17 @@ services:
       # You may use a bind-mounted host directory instead, so that it is harder to accidentally remove the volume and lose all your data!
       # - ./docker/db/data:/var/lib/postgresql/data:rw
 ###< doctrine/doctrine-bundle ###
+  rr:
+    hostname: ${DDEV_SITENAME}-rr
+    container_name: ddev-${DDEV_SITENAME}-rr
+    image: php:8.2-cli-alpine
+    build:
+      dockerfile: ./deployment/docker/roadrunner/Dockerfile
+    ports:
+      - '9001:9001' # шарим порт 9001
+    user: '1000:1000' # работа от текущего юзера в системе
+    volumes:
+      - ./:/app # монтируем проект в /app
 
 volumes:
 ###> doctrine/doctrine-bundle ###
