--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,15 @@
         "ext-iconv": "*",
         "api-platform/doctrine-orm": "^4.0",
         "api-platform/symfony": "^4.0",
+        "asmblah/php-amqp-compat": "^0.4.13",
+        "baldinof/roadrunner-bundle": "^3.1",
         "doctrine/dbal": "^3",
         "doctrine/doctrine-bundle": "^2.13",
         "doctrine/doctrine-migrations-bundle": "^3.3",
         "doctrine/orm": "^3.2",
         "easycorp/easyadmin-bundle": "4.x-dev",
         "firebase/php-jwt": "^6.10",
+        "grpc/grpc": "^1.57",
         "guzzlehttp/guzzle": "^7.9",
         "knplabs/knp-paginator-bundle": "^6.5",
         "lexik/jwt-authentication-bundle": "^3.1",
@@ -23,6 +26,7 @@
         "nelmio/cors-bundle": "^2.5",
         "phpdocumentor/reflection-docblock": "^5.4",
         "phpstan/phpdoc-parser": "^1.30",
+        "spiral/roadrunner-grpc": "^3.4",
         "stof/doctrine-extensions-bundle": "^1.12",
         "symfony/amqp-messenger": "6.4.*",
         "symfony/asset": "6.4.*",
@@ -60,7 +64,8 @@
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/intl-extra": "^3.12",
         "twig/string-extra": "^3.12",
-        "twig/twig": "^2.12|^3.0"
+        "twig/twig": "^2.12|^3.0",
+        "ext-grpc": "*"
     },
     "config": {
         "allow-plugins": {
@@ -72,7 +77,9 @@
     },
     "autoload": {
         "psr-4": {
-            "App\\": "src/"
+            "App\\": "src/",
+            "GPBMetadata\\": "generated/GPBMetadata",
+            "Grpc\\": "generated/Grpc"
         }
     },
     "autoload-dev": {
@@ -115,6 +122,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.6",
         "helmich/phpunit-json-assert": "^3.5",
         "phpunit/phpunit": "^9.5",
+        "spiral/roadrunner-cli": "^2.6",
         "symfony/browser-kit": "6.4.*",
         "symfony/css-selector": "6.4.*",
         "symfony/debug-bundle": "6.4.*",
